# fastapi_alembic_pain

./: .gitignore  README.md  alembic.ini  develop.md  pyproject.toml  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 3c8bcbb64d41_create_notes_and_tags.py  40f6b1903b70_update_tables.py  778e5cf9d881_add_content_items_and_tags.py  ab0be29ae8ad_add_timestapm_into_note.py  d9a8c8afa2f4_fix_date_field_in_note.py
api/: config.py  database.py  main.py  requirements.txt
api/articles/: models.py  repository.py  router.py  schemas.py  service.py
api/notes/: models.py  router.py  schemas.py
api/tags/: models.py  repository.py  router.py  schemas.py  service.py
migrations/: env.py
src/: config.py  database.py  main.py
src/auth/: models.py
src/notes/: models.py  router.py  schemas.py
